--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "@types/react": "^16.0.34",
+    "create-react-class": "^15.6.2",
+    "eventemitter3": "^3.0.0",
+    "flux": "^3.1.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
