--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "create-react-class": "^15.6.2",
     "eventemitter3": "^3.0.0",
     "flux": "^3.1.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-formio": "^1.4.25"
   }
 }
